<resources>
    <string name="app_name">Таджвид</string>
    <string name="main_total_reading_progress_info">Вы прошли %1$d урок из %2$d</string>
    <string name="main_letters">Буквы</string>
    <string name="main_modules_progress_info">%1$d / %2$d</string>
    <string name="settings">Настройки</string>
    <string name="main_pronunciation_rules">Правила произношения</string>
    <string name="main_pronunciation_rules_info">Пройдено 0 из 7</string>
    <string name="main_reading_rules">Правила чтения Корана</string>
    <string name="main_reading_rules_info">Пройдено 0 из 17</string>
    <string name="main_author_name">Ильдар Аляутдинов</string>

    <string name="lessons_item_disabled_text">Доступно в платной версии</string>

    <string name="settings_notice_info">Уведомления</string>
    <string name="settigs_communication">Связаться с автором</string>
    <string name="settings_about_project">О проекте</string>
    <string name="settings_recommendation">Порекомендовать приложение</string>
    <string name="settings_assessment">Оценить в Google Play</string>
    <string name="settings_web_site_about_project">tajweed.ru</string>
    <string name="settings_recommend_chooser_title">Выберите действие</string>
    <string name="settings_recommend_text">Рекомендую скачать приложение Tajwid:</string>
    <plurals name="lessons_list_sections_info">
        <item quantity="zero">Без карточек</item>
        <item quantity="one">%d карточка</item>
        <item quantity="two">%d карточки</item>
        <item quantity="few">%d карточки</item>
        <item quantity="many">%d карточек</item>
        <item quantity="other">%d карточек</item>
    </plurals>
    <string name="lessons_list_exercise_info">без упражнений</string>
    <plurals name="lessons_list_exercises_info">
        <item quantity="zero">без упражнений</item>
        <item quantity="one">%d упражнение</item>
        <item quantity="two">%d упражнения</item>
        <item quantity="few">%d упражнения</item>
        <item quantity="many">%d упражнений</item>
        <item quantity="other">%d упражнений</item>
    </plurals>
    <string name="lessons_list_info_format">%1$s, %2$s</string>
    <string name="lesson_title">Урок %d</string>
    <plurals name="main_total_reading_progress_info">
        <item quantity="zero">Вы прошли %1$d уроков из %2$d</item>
        <item quantity="one">Вы прошли %1$d урок из %2$d</item>
        <item quantity="two">Вы прошли %1$d урока из %2$d</item>
        <item quantity="few">Вы прошли %1$d урока из %2$d</item>
        <item quantity="many">Вы прошли %1$d уроков из %2$d</item>
        <item quantity="other">Вы прошли %1$d уроков из %2$d</item>
    </plurals>
    <string name="lesson_font_settings">Настройки шрифта</string>
    <string name="lesson_font_settings_size">Размер шрифта</string>
    <string name="exercise_title">Урок %1$d. Упражнение %2$d</string>
    <string name="go_to_lesson">перейти к упражнениям</string>
    <string name="right">правильно</string>
    <string name="finishing">завершить</string>
    <string name="onward">далее</string>
    <string name="right_answer">правильный ответ</string>
    <string name="notification_channel_description">Вы давно не учили Таджвид</string>
    <string name="application_for_study_koran">Изучение правил чтения Корана, доступное каждому</string>
    <string name="go_to_the_site">На сайт</string>
    <string name="settings_recommend_subject">Отзыв на приложение Таджвид</string>
    <string name="exercise_pronounce_sound">Нажмите на текст, чтобы его прослушать.</string>
    <string name="title_reading">Чтение</string>
    <string name="title_pronounce">Произношение</string>
    <string name="title_main">Главная</string>
    <string name="your_score">Твоя статистика</string>
    <string name="click_button">Приложение предназначено для самостоятельного обучения арабским буквам и правильному произношению при чтении Корана.\n\nДля желающих заниматься онлайн с преподавателем есть платные курсы в Центре Корана.</string>
    <string name="with_teacher">Онлайн Курсы</string>
    <string name="dear_friend">Дорогой друг!</string>
    <string name="radiobutton3">Детская</string>
    <string name="radiobutton2">Женская</string>
    <string name="radiobutton1">Мужская</string>
    <string name="text_register">Зарегистрироваться</string>
    <string name="text_groups">Группы</string>
    <string name="text_lessons_time">Время занятий (по МСК)</string>
    <string name="title_with_teacher">С учителем</string>
    <string name="title_item_teacher_name">Устаз: %s</string>
    <string name="text_please_wait">Пожалуйста, подождите…</string>
    <string name="title_new_app_version">Новая версия приложения</string>
    <string name="desc_new_app_version">Кликните по уведомлению для перехода в магазин приложений</string>
    <string name="unknown_error">Что-то пошло не так…</string>
    <string name="error_empty_phone">Введите телефон</string>
    <string name="error_invalid_phone">Неправильный телефон</string>
    <string name="error_empty_email">Введите почту</string>
    <string name="error_invalid_email">Неправильная почта</string>
    <string name="error_empty_name">Введите имя</string>
    <string name="error_invalid_name">Имя должно содержать только буквы и пробелы</string>
    <string name="hint_email">Электронная почта</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="checkbox_title_individual">Прошу связаться со мной по поводу индивидуальных курсов</string>
    <string name="desc_individual">Заявка на платные курсы будет отправлена в Исламский Центр Дар г. Москвы в отделение обучения Корана</string>
    <string name="hint_name">Имя</string>
    <string name="text_send">Отправить</string>
    <string name="checkbox_title_secure_confidentiality">Нажимая на кнопку ОТПРАВИТЬ, вы даете согласие на обработку своих персональных данных: </string>
    <string name="secure_confidentiality">Политика конфиденциальности</string>
    <string name="user_information">Пользовательское соглашение</string>
    <string name="click_secure_confidentiality"><u>Политика конфиденциальности</u></string>
    <string name="url_secure_confidentiality">https://telegra.ph/POLITIKA-KONFIDENCIALNOSTI-04-16-2</string>
    <string name="url_user_information">https://telegra.ph/POLZOVATELSKOE-SOGLASHENIE-DLYA-PRILOZHENIYA-04-16</string>
    <string name="success_register">Спасибо за регистрацию!\nС вами свяжутся по предоставленным контактам.</string>
    <string name="price_placeholder">%s руб/урок</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system_locale" />


</resources>
