<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:context="ru.tajwid.app.ui.activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_4dp"
        app:title="@string/settings" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size" />

    <LinearLayout
        android:id="@+id/settings_notice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_notice_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_notice_info"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="InefficientWeight" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_switch"
            style="@style/AppSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:checked="true" />
    </LinearLayout>



    <TextView
        android:id="@+id/settings_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_12dp"
        android:paddingRight="@dimen/dimen_16dp"
        android:paddingBottom="@dimen/dimen_12dp"
        android:text="Тема"
        android:textSize="@dimen/text_size_16sp"
        tools:ignore="InefficientWeight" />

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Темная" />

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Светлая" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24dp">

        <TextView
            android:id="@+id/settings_communication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settigs_communication"
            android:textSize="@dimen/text_size_16sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_about_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_about_project"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="NestedWeights" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24dp">

        <TextView
            android:id="@+id/settings_assessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_assessment"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="InefficientWeight" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_recommendation"
            android:textSize="@dimen/text_size_16sp" />

    </FrameLayout>


</LinearLayout>