<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white_three"
              android:orientation="vertical"
              tools:context="ru.tajwid.app.ui.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppToolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:background="@color/default_separator"/>

    <LinearLayout
        android:id="@+id/settings_notice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_four"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_notice_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_notice_info"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="InefficientWeight"/>

        <Switch
            android:id="@+id/settings_switch"
            style="@style/AppSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:checked="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:background="@color/default_separator"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@color/white_four">

        <TextView
            android:id="@+id/settings_communication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settigs_communication"
            android:textSize="@dimen/text_size_16sp"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:background="@color/default_separator"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_four">

        <TextView
            android:id="@+id/settings_about_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_about_project"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="NestedWeights"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:background="@color/default_separator"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@color/white_four">

        <TextView
            android:id="@+id/settings_assessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_assessment"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="InefficientWeight"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:background="@color/default_separator"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_four">

        <TextView
            android:id="@+id/settings_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/settings_recommendation"
            android:textSize="@dimen/text_size_16sp"/>
    </FrameLayout>
</LinearLayout>