<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_background"
            tools:context="ru.tajwid.app.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/author_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/main_author_name"
            android:textColor="@color/black_text"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_12sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:src="@drawable/main_logo"
            tools:ignore="ContentDescription"/>

        <ProgressBar
            android:id="@+id/main_total_reading_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_4dp"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:progressDrawable="@drawable/main_progress_bar"
            tools:progress="15"/>

        <TextView
            android:id="@+id/main_total_reading_progress_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/main_total_reading_progress_info"
            android:textAllCaps="true"
            android:textColor="@color/black_text"
            android:textSize="@dimen/text_size_12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_size"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@color/default_separator"/>

        <LinearLayout
            android:id="@+id/main_menu_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/main_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:textColor="@color/black_text"
                android:text="@string/settings"
                android:textSize="@dimen/text_size_24sp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
